src/component/Title.css
.Parallax-cover {
    /* The image used */
    background-image: url("../img/bg.JPG");
  
    /* Set a specific height */
    min-height: 100vh;
  
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    color: white;
    text-shadow: 2px  2px  4px  grey;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }

  Parallax:after{
    content:"";
    position:fixed; /* stretch a fixed position to the whole screen */
    top:0;
    min-height: 100vh; /* fix for mobile browser address bar appearing disappearing */
    left:0;
    right:0;
    z-index:-1; /* needed to keep in the background */
    background-image: url("../img/bg.JPG");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
  

/* unvisited link */
a:link {
    color: white;
  }
  
  /* visited link */
  a:visited {
    color: white;
  }
  
  /* mouse over link */
  a:hover {
    color: white;
  }
  
  /* selected link */
  a:active {
    color: white;
  }

  @media (max-width: 424px) { 
    .Headline {
      font-size: 40px;
      font-weight:normal;
      line-height:1;
      padding: 1em;
    }

    .LinkedIn {
      font-size: 30px;
      color: white;
  }
  
    .GoTo {
        position: absolute;
        bottom: 2em;
        font-size: 30px;
        color: white;
    }
   }

  @media (min-width: 424px) and (max-width: 744px) { 
    .Headline {
      font-size: 40px;
      font-weight:normal;
      line-height:1;
      padding: 0.5em;
    }

    .LinkedIn {
      font-size: 30px;
      color: white;
  }
  
    .GoTo {
        position: absolute;
        bottom: 2em;
        font-size: 30px;
        color: white;
    }
   }

  @media (min-width: 744px) and (max-width: 1200px) { 
    .Headline {
      font-size: 45px;
      font-weight:normal;
      line-height:1;
      padding: 1em;
    }

    .LinkedIn {
      font-size: 30px;
      color: white;
  }
  
    .GoTo {
        position: absolute;
        bottom: 2em;
        font-size: 30px;
        color: white;
    }
   }

  @media (min-width: 1200px) { 
    .Headline {
      font-size: 60px;
      font-weight:normal;
      line-height:1;
      padding: 1em;
    }

    .LinkedIn {
      font-size: 30px;
      color: white;
  }
  
    .GoTo {
        position: absolute;
        bottom: 2em;
        font-size: 30px;
        color: white;
    }
   }

